all components of gallery working

--- a/lesson_5/photo_gallery/example.html
+++ b/lesson_5/photo_gallery/example.html
@@ -14,7 +14,7 @@
         <figcaption></figcaption>
       </figure>
       <ul>
-        <li><img src="images/1.png" alt="" title="Photo 1" data-image-source="images/1.png" /></li>
+        <li><img src="images/1.png" alt="" title="Photo 1" data-image-source="images/1.png" class="selected" /></li>
         <li><img src="images/2.png" alt="" title="Photo 2" data-image-source="images/2.png" /></li>
         <li><img src="images/3.png" alt="" title="Photo 3" data-image-source="images/3.png" /></li>
         <li><img src="images/4.png" alt="" title="Photo 4" data-image-source="images/4.png" /></li>
