my solution to problem 8; doesnt work but I would like to be able ot sove on my own later

--- a/exercises/dom_traversing_querying_and_manipulation/08.html
+++ b/exercises/dom_traversing_querying_and_manipulation/08.html
@@ -15,7 +15,7 @@
           let name = String(currentArray[0]).toLowerCase().replace(',', '');
           let newElement = document.createElement(name);
           console.log(currentElement);
-          currentElement.insertAdjacentElement('afterend', newElement);
+          currentElement.appendChild(newElement);
           for (let i = 1; i < currentArray.length; i += 1) {
             recursiveAddNodes(currentArray[i], newElement);
           }
